--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-﻿SECRET_KEY=lotto-analyzer-super-secret-key-development
-DATABASE_URL=sqlite:///lotto.db
-FLASK_ENV=development
-FLASK_DEBUG=True
+﻿SECRET_KEY=lotto-analyzer-railway-production-key
+FLASK_ENV=production
+FLASK_DEBUG=False
