--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,3 @@
-@'
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.5
-Flask-CORS==4.0.0
+﻿Flask==2.3.3
 gunicorn==21.2.0
-python-dotenv==1.0.0
-psycopg2-binary==2.9.7
-requests==2.31.0
-pandas==2.1.0
-numpy==1.24.3
-'@ | Out-File -FilePath "requirements.txt" -Encoding UTF8
+Werkzeug==2.3.7
